# s3_tool

./: .env.example  .gitignore  README.md  pyproject.toml
reference/: btu_lec2_presentation.py
s3_tool/: __init__.py  buckets.py  client.py  lifecycle.py  main.py  quotes.py  uploads.py  validation.py  versioning.py  versioning_cli.py
